@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-06-22:
+
+- Fixed: 'echo' failed when used inside a command substitution that
+  is inside a nested compound assignment.
+
 2022-06-20:
 
 - Fixed a race condition that could cause redirections to fail with a
